--- a/repost.css
+++ b/repost.css
@@ -16,9 +16,9 @@ th{background:#328aa4 url(tr_back.gif) repeat-x;color:#fff;}
 td{background:#e5f1f4;}
 
 /* tablecloth styles */
-
-tr.even td{background:#e5f1f4;}
-tr.odd td{background:#f8fbfc;}
+td.postcell {background:#e5f1f4;}
+td.fuckoff {background:#6A94D4;}
+td.rockon {background:#FFb273;}
 
 th.over, tr.even th.over, tr.odd th.over{background:#4a98af;}
 th.down, tr.even th.down, tr.odd th.down{background:#bce774;}
@@ -34,6 +34,13 @@ td.empty, tr.odd td.empty, tr.even td.empty{background:#fff;}
 /* post styles */
 img.smallpost{width:150px;}
 img.bigpost{width:300px;}
+
+img.votehand{width:30px;
+    width:30px;
+    float:right; 
+    margin: 0 0 15px 15px; 
+    clear:right
+}
 
 div.zoomer{
     position: absolute;
