--- a/repost.css
+++ b/repost.css
@@ -7,32 +7,39 @@
 
 /* general styles */
 
-table, td{
-	font:100% Arial, Helvetica, sans-serif; 
-}
-table{width:100%;border-collapse:collapse;margin:1em 0;}
-th, td{text-align:left;padding:.5em;border:1px solid #fff;}
-th{background:#328aa4 url(tr_back.gif) repeat-x;color:#fff;}
-td{background:#e5f1f4;}
+table{width:980px;border-collapse:collapse;margin:1em 0;}
 
 /* tablecloth styles */
-td.postcell {background:#e5f1f4;}
-td.fuckoff {background:#6A94D4;}
-td.rockon {background:#FFb273;}
-
-th.over, tr.even th.over, tr.odd th.over{background:#4a98af;}
-th.down, tr.even th.down, tr.odd th.down{background:#bce774;}
-th.selected, tr.even th.selected, tr.odd th.selected{}
-
-td.over, tr.even td.over, tr.odd td.over{background:#ecfbd4;}
-td.down, tr.even td.down, tr.odd td.down{background:#bce774;color:#fff;}
-td.selected, tr.even td.selected, tr.odd td.selected{background:#bce774;color:#555;}
-
-/* use this if you want to apply different styleing to empty table cells*/
-td.empty, tr.odd td.empty, tr.even td.empty{background:#fff;}
+td.postcell {
+    padding:5px;
+    background:#e5f1f4;
+    border:1px solid #fff;
+    width:250px;
+    height:150px;
+}
+td.fuckoff {
+    padding:5px;
+    background:#6A94D4;
+    border:1px solid #fff;
+    width:250px;
+    height:150px;
+    border:1px solid #fff;
+}
+td.rockon {
+    padding:5px;
+    background:#FFb273;
+    border:1px solid #fff;
+    width:250px;
+    height:150px;
+}
 
 /* post styles */
-img.smallpost{width:150px;}
+img.smallpost{
+    width:150px;
+    position:relative;
+    bottom:10px;
+    left:10px;
+}
 img.bigpost{width:300px;}
 
 img.votehand{width:30px;
