Few small changes to main page and the javascript. Trying to sort out the add and delete crap

--- a/repost.css
+++ b/repost.css
@@ -7,7 +7,7 @@
 
 /* general styles */
 
-table{width:980px;border-collapse:collapse;margin:1em 0;}
+table{border-collapse:collapse;margin:1em 0;}
 
 /* tablecloth styles */
 td.postcell {
