--- a/content.css
+++ b/content.css
@@ -1,10 +1,13 @@
-.imgdialog {
+div.imgdialog {
   visibility: hidden;
   position: absolute;
-  background:-webkit-gradient(linear, left top, left bottom, from(#2e88c4), to(#075698));
+  background:-webkit-gradient(linear, left top, left bottom, from(#B4C3FF), to(#075698));
   border-radius:15px;
   -webkit-border-radius: 5px;
   -webkit-box-shadow:1px 1px 5px #000;
   box-shadow:1px 1px 5px #000;
+  padding: 7px 10px 7px 10px;
 }
-
+div.label {
+    margin: 0 5px 0 0 ;
+}
