--- a/options.css
+++ b/options.css
@@ -45,7 +45,15 @@ tr.acctListHeading {
 	border-bottom: 1px solid #fff;
 	color: #039;
 }
-
+div.addAcctPopup {
+  position: absolute;
+  background:-webkit-gradient(linear, left top, left bottom, from(#B4C3FF), to(#075698));
+  border-radius:15px;
+  -webkit-border-radius: 5px;
+  -webkit-box-shadow:1px 1px 5px #000;
+  box-shadow:1px 1px 5px #000;
+  padding: 7px 10px 7px 10px;
+}
 
 td.fuckoff {
     padding:5px;
