--- a/repost.css
+++ b/repost.css
@@ -79,6 +79,22 @@ img.postpreview{
     left:10px;
 }
 
+div.textpostbox{
+  visibility: hidden;
+  position: absolute;
+  background:-webkit-gradient(linear, left top, left bottom, from(#B4C3FF), to(#075698));
+  border-radius:15px;
+  -webkit-border-radius: 5px;
+  -webkit-box-shadow:1px 1px 5px #000;
+  box-shadow:1px 1px 5px #000;
+  padding: 7px 10px 7px 10px;
+ }
+.caption{
+}
+.content{
+}
+
+
 div.postcaption{
     margin: 13px 0 0 10px;
     font-family:"Lucida Console", Courier New, monospace;
