--- a/content.css
+++ b/content.css
@@ -7,6 +7,7 @@ div.repostdialog {
   -webkit-box-shadow:1px 1px 5px #000;
   box-shadow:1px 1px 5px #000;
   padding: 7px 10px 7px 10px;
+  z-index:99999999;
 }
 div.label {
     margin: 0 5px 0 0 ;
