--- a/repost.css
+++ b/repost.css
@@ -69,14 +69,18 @@ div.metric{
 /**
  * Post styles 
  */
-img.postpreview{
+.postpreview{
     max-width:250px;
     max-height:120px;    
     position:relative;
     top:10px;
     left:10px;
+    font-size: 75%;
 }
-
+div.postpreview{
+    max-width:180px;
+    word-wrap: break-word;
+}
 div.postcaption{
     margin: 13px 0 0 10px;
     font-family:"Lucida Console", Courier New, monospace;
@@ -87,23 +91,27 @@ div.postcaption{
  */
 div.textpostbox{
   visibility: hidden;
-  position: absolute;
+  position: fixed;
   background:-webkit-gradient(linear, left top, left bottom, from(#9D98e8), to(#C4A7FF));
   border-radius:15px;
   -webkit-border-radius: 5px;
   -webkit-box-shadow:1px 1px 5px #000;
   box-shadow:1px 1px 5px #000;
   padding: 7px 10px 7px 10px;
-  margin-left:auto;
-  margin-right:auto;
+  top:50px;
+  left: 300px;
+  width: 300px;
+  height: 150px;
  }
 .caption{
+    position: absolute;
     left:10px;
     top:20px;
     margin: 15px 5px 15px 0px;
 }
-.input{
-    left:20px;
+.captioninput{
+    position: absolute;
+    left:100px;
     top:20px;
     margin: 15px 5px 15px 0px;
 }
@@ -113,6 +121,21 @@ div.textpostbox{
     top:50px;
     margin: 15px 5px 15px 0px;
 }
+.contentinput{
+    position:absolute;
+    left:100px;
+    top:50px;
+    margin: 15px 5px 15px 0px;
+}
+.sendtext{
+    position:absolute;
+    left:150px;
+    top:110px;
+    width:130px;
+}
+.contenttext{
+}
+
 /*
  *  9D98E8
  *  C4A7FF
