--- a/repost.css
+++ b/repost.css
@@ -87,22 +87,106 @@ div.postcaption{
 }
 
 /**
- * Post input styles
+ * Generic floating box
  */
-div.textpostbox{
+div.floater {
+  opacity:0.95;
   visibility: hidden;
   position: fixed;
-  background:-webkit-gradient(linear, left top, left bottom, from(#9D98e8), to(#C4A7FF));
-  border-radius:15px;
-  -webkit-border-radius: 5px;
-  -webkit-box-shadow:1px 1px 5px #000;
-  box-shadow:1px 1px 5px #000;
+  background:#388EA6;
+  box-shadow:2px 2px 5px #000;
   padding: 7px 10px 7px 10px;
+}
+.floatclose {
+    font-size: 150%;
+    color:#000;
+    cursor:pointer;
+    font-weight:bold;
+    font-family:"Lucida Console", Courier New, monospace;
+    position: absolute;
+    top: 5px;
+    right: 7px;
+    z-index:99999999;
+}
+
+/**
+ * Post input styles
+ */
+.textpostbox{
   top:50px;
   left: 300px;
   width: 300px;
   height: 150px;
  }
+.caption{
+    font-family:"Lucida Console", Courier New, monospace;
+    position: absolute;
+    left:10px;
+    top:20px;
+    margin: 15px 5px 15px 0px;
+}
+.captioninput{
+    position: absolute;
+    left:100px;
+    top:20px;
+    margin: 15px 5px 15px 0px;
+}
+.content{
+    font-family:"Lucida Console", Courier New, monospace;
+    position:absolute;
+    left:10px;
+    top:50px;
+    margin: 15px 5px 15px 0px;
+}
+.contentinput{
+    position:absolute;
+    left:100px;
+    top:50px;
+    margin: 15px 5px 15px 0px;
+}
+.sendtext{
+    font-family:"Lucida Console", Courier New, monospace;
+    position:absolute;
+    left:150px;
+    top:110px;
+    width:130px;
+}
+
+/**
+ * Links
+ */
+
+span.name {
+      cursor: pointer;
+}
+
+/*TOOLTIPS*/
+.tip {
+    text-align: left;
+    width:auto;
+    max-width:500px;
+}
+
+.tip-title {
+    font-size: 11px;
+    text-align:center;
+    margin-bottom:2px;
+}
+
+.linkbox{
+  top: 50px;
+  left: 50px;
+  width: 600;
+  height: 400px;
+ }
+
+.infovis{
+    opacity:1;
+    margin: 15px 15px 15px 15px;
+    height: 400px;
+    width: 600px;
+}
+
 .caption{
     position: absolute;
     left:10px;
@@ -136,24 +220,3 @@ div.textpostbox{
 .contenttext{
 }
 
-/*
- *  9D98E8
- *  C4A7FF
- *  B4C3FF
- *  98BEE8
- *  A7E7FF
- */
-
-img.bigpost{
-    width:300px;
-}
-div.zoomer{
-    position: absolute;
-    border-radius:5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    background: white;
-    -moz-box-shadow:1px 1px 5px #000;
-    -webkit-box-shadow:1px 1px 5px #000;
-    box-shadow:1px 1px 5px #000;
-}
