refs #27. Added the functionality to delete nodes from the tree. Started to build standard js lib too, but very disjointed and all over the place

--- a/repost.css
+++ b/repost.css
@@ -155,7 +155,29 @@ div.floater {
 /**
  * Links
  */
+.confirmationPopup{
+  width: 250px;
+  height: 70px;
+}
+.message{
+    font-family:"Lucida Console", Courier New, monospace;
+    position:absolute;
+    left:10px;
+    top:10px;
+}
 
+.ok{
+    position: absolute;
+    top: 50px;
+    left: 30px;
+    width: 70px;
+}
+.cancel{
+    position: absolute;
+    top: 50px;
+    left: 90px;
+    width: 70px;
+}
 span.name {
       cursor: pointer;
 }
