--- a/repost.css
+++ b/repost.css
@@ -11,81 +11,95 @@
 /**
  * Post Table
  */
-table{border-collapse:collapse;margin:1em 0;}
+table{
+    border-collapse:collapse;
+    margin:1em 0;
+    table-layout: fixed;
+}
 
-td.postcell {
-    padding:5px;
+.postcell {
     background:#B4C3FF;
     border:1px solid #fff;
-    width:250px;
-    height:150px;
 }
-td.fuckoff {
-    padding:5px;
-    background:#9D98E8;
-    border:1px solid #fff;
-    width:250px;
-    height:150px;
-    border:1px solid #fff;
-}
-td.rockon {
-    padding:5px;
-    background:#A7E7FF;
-    border:1px solid #fff;
-    width:250px;
-    height:150px;
-}
-
-img.votehand{
-    width:27px;
-    float:right; 
-    margin: 15px 5px 15px 0px;
-    clear:right;
-}
-
-img.downhand{
-    width:27px;
-    float:right; 
-    margin: 15px 5px 15px 0px;
-    clear:right;
+.fuckoff {
     background:#9D98E8;
 }
-
-img.uphand{
-    width:27px;
-    float:right; 
-    margin: 15px 5px 15px 0px;
+.rockon {
     background:#A7E7FF;
-    clear:right;
 }
-
+.votehand{
+    width:27px;
+    position: relative; 
+}
+.downhand{
+    top:30px;
+    left:185px;
+}
+.uphand{
+    top:10px;
+    left:185px;
+}
 div.metric{
-    float:right; 
-    clear:right;
-    margin: 0 15px 0 0px;
+    top:20px;
+    left:185px;
+    position: relative; 
     font-family:"Lucida Console", Courier New, monospace;
 }
 
 /**
  * Post styles 
  */
-.postpreview{
-    max-width:250px;
-    max-height:120px;    
+ .postspace{
     position:relative;
+    height: 150px;
+    width: 220px;
+ }
+.post{
+    position:absolute;
+    left:0px;
+    top:0px;
+    height: 150px;
+    width: 180px;
+ }
+.imagepost{
+}
+.imagepreview{
+    position:absolute;
     top:10px;
     left:10px;
-    font-size: 75%;
+    max-width:160px;
+    max-height:100px;    
 }
-div.postpreview{
+.imagepreview:hover{
+    background:#388EA6;
+    box-shadow:2px 2px 5px #000;
+    padding: 7px 10px 7px 10px;
+    max-width:600px;
+    max-height:400px;    
+    z-index:9999;
+}
+div.posttextbody{
+    position: absolute;
+    font-size: 75%;
+    top: 30px;
+    left: 10px;
     max-width:180px;
+    font-family:"Lucida Console", Courier New, monospace;
     word-wrap: break-word;
 }
+.textpostcaption{
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
 div.postcaption{
-    margin: 13px 0 0 10px;
     font-family:"Lucida Console", Courier New, monospace;
 }
-
+.imagepostcaption{
+    position:absolute;
+    top: 120px;
+    left: 12px;
+}
 /**
  * Generic floating box
  */
