text over work around. just removes the hidden property so you can see it all but so it doesn't over lap it

--- a/repost.css
+++ b/repost.css
@@ -102,6 +102,10 @@ div.postcaption{
     height: 35px;
     overflow: hidden;
 }
+.imagepostcaption:hover{
+    overflow: visible;
+    z-index:9999;
+}
 /**
  * Generic floating box
  */
