--- a/repost.css
+++ b/repost.css
@@ -20,6 +20,7 @@ table{
 .postcell {
     background:#B4C3FF;
     border:1px solid #fff;
+	width:20%;
 }
 .fuckoff {
     background:#9D98E8;
@@ -51,25 +52,30 @@ div.metric{
  */
  .postspace{
     position:relative;
+    height: 100%;
+    width: 100%;
+	/*
     height: 180px;
     width: 280px;
+	*/
  }
 .post{
     position:absolute;
     left:0px;
     top:0px;
-    height: 180px;
-    width: 240px;
+    height: 100%;
+    width: 100%;
  }
 .imagepost{
 }
 .imagepreview{
     position:absolute;
-    top:10px;
-    left:10px;
-    max-width:180px;
-    max-height:120px;    
+    top:0px;
+    left:0px;
+    max-width:100%;
+    max-height:100%;    
 }
+/*
 .imagepreview:hover{
     background:#388EA6;
     box-shadow:2px 2px 5px #000;
@@ -77,7 +83,10 @@ div.metric{
     max-width:600px;
     max-height:400px;    
     z-index:9999;
+	left:0%;
+	top:0%;
 }
+*/
 div.posttextbody{
     position: absolute;
     font-size: 75%;
@@ -290,3 +299,47 @@ span.name {
 .contenttext{
 }
 
+.divrow {
+	position:absolute;
+	width:100%;
+}
+
+.divcol {
+	position:absolute;
+    background:#B4C3FF;
+    height:100%;
+}
+
+#divRow0 {
+    top:10%;
+    height:20%;
+}
+#divRow1 {
+    top:30%;
+    height:20%;
+}
+#divRow2 {
+    top:50%;
+    height:20%;
+}
+#divRow3 {
+    top:70%;
+    height:20%;
+}
+
+.divCol0 {
+    left:10%;
+	width:20%;
+}
+.divCol1 {
+    left:30%;
+	width:20%;
+}
+.divCol2 {
+    left:50%;
+	width:20%;
+}
+.divCol3 {
+    left:70%;
+	width:20%;
+}
