--- a/repost.css
+++ b/repost.css
@@ -58,6 +58,7 @@ div.metric{
     height: 180px;
     width: 280px;
 	*/
+	text-align:center;
  }
 .post{
     position:absolute;
@@ -65,15 +66,28 @@ div.metric{
     top:0px;
     height: 100%;
     width: 100%;
+	text-align:center;
  }
-.imagepost{
+
+div.imagepost {
+	text-align:center;
+	float:left;
+	top: 0px;
+    width:100%;
+    height:100%;    
 }
+
 .imagepreview{
-    position:absolute;
-    top:0px;
-    left:0px;
+    /*position:absolute;
+    left:0px;*/
+    top: 0px;
     max-width:100%;
     max-height:100%;    
+	vertical-align:middle;
+	/*
+	display: block;
+	margin: auto;
+	*/
 }
 /*
 .imagepreview:hover{
@@ -299,31 +313,32 @@ span.name {
 .contenttext{
 }
 
-.divrow {
+div.divrow {
 	position:absolute;
 	width:100%;
 }
 
-.divcol {
+div.divcol {
 	position:absolute;
-    background:#B4C3FF;
+    /*background:#B4C3FF;*/
     height:100%;
+	text-align:center;
 }
 
 #divRow0 {
-    top:10%;
+    top:3%;
     height:20%;
 }
 #divRow1 {
-    top:30%;
+    top:27%;
     height:20%;
 }
 #divRow2 {
-    top:50%;
+    top:51%;
     height:20%;
 }
 #divRow3 {
-    top:70%;
+    top:75%;
     height:20%;
 }
 
