--- a/css/repost.css
+++ b/css/repost.css
@@ -364,3 +364,17 @@ div.divcol {
     left:70%;
 	width:20%;
 }
+
+#repostMenu {
+    text-align: center;
+    width: 100%;
+    height: 20px;
+}
+#repostMenu .statusCircle {
+    display:block;
+    width: 20px;
+    height: 20px;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    background: #FC4023;
+}
