--- a/css/content.css
+++ b/css/content.css
@@ -1,4 +1,7 @@
-div.repostdialog {
+/**
+ * Generic floating box
+ */
+div.repostdialog.floater{
   opacity:0.95;
   visibility: hidden;
   position: absolute;
@@ -7,7 +10,64 @@ div.repostdialog {
   padding: 7px 10px 7px 10px;
   z-index:99999999;
 }
-div.repostdialog .label {
+
+label.repostdialog{
     font-family:"Lucida Console", Courier New, monospace;
     margin: 0 5px 0 0 ;
 }
+
+span.repostdialog.floatclose {
+    font-size: 150%;
+    color:#000;
+    cursor:pointer;
+    font-weight:bold;
+    font-family:"Lucida Console", Courier New, monospace;
+    position: absolute;
+    top: 5px;
+    right: 7px;
+    z-index:99999999;
+}
+
+/**
+ * Post input styles
+ */
+.repostdialog.textpostbox{
+  top:50px;
+  left: 300px;
+  width: 300px;
+  height: 150px;
+ }
+.repostdialog.caption{
+    font-family:"Lucida Console", Courier New, monospace;
+    position: absolute;
+    left:10px;
+    top:20px;
+    margin: 15px 5px 15px 0px;
+}
+.repostdialog.captioninput{
+    position: absolute;
+    left:100px;
+    top:20px;
+    margin: 15px 5px 15px 0px;
+}
+.repostdialog.content{
+    font-family:"Lucida Console", Courier New, monospace;
+    position:absolute;
+    left:10px;
+    top:50px;
+    margin: 15px 5px 15px 0px;
+}
+.repostdialog.contentinput{
+    position:absolute;
+    left:100px;
+    top:50px;
+    margin: 15px 5px 15px 0px;
+}
+.repostdialog.sendtext{
+    font-family:"Lucida Console", Courier New, monospace;
+    position:absolute;
+    left:150px;
+    top:110px;
+    width:130px;
+}
+
