--- a/css/repost.css
+++ b/css/repost.css
@@ -268,18 +268,26 @@ div.divcol {
 #divRow0 {
     top:3%;
     height:20%;
+    margin: 0px;
+    left:0px;
 }
 #divRow1 {
     top:27%;
     height:20%;
+    margin: 0px;
+    left:0px;
 }
 #divRow2 {
     top:51%;
     height:20%;
+    margin: 0px;
+    left:0px;
 }
 #divRow3 {
     top:75%;
     height:20%;
+    margin: 0px;
+    left:0px;
 }
 
 .divCol0 {
@@ -299,16 +307,47 @@ div.divcol {
 	width:20%;
 }
 
+/**
+ * MENU BAR CRAP
+ */
+
 #repostMenu {
-    text-align: center;
+    position:fixed;
+    top: 0px;
+    left: 0px;
     width: 100%;
     height: 20px;
 }
+
 #repostMenu .statusCircle {
-    display:block;
+    display:inline;
     width: 20px;
     height: 20px;
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
     background: #FC4023;
+}
+
+#repostLogo {
+    float: left;
+    margin: 0px;
+}
+
+.toolbar {
+    margin: 0px;
+}
+
+.toolbar li {
+    display: inline;
+    padding: 0.5em;
+    padding: 0.5em;
+    float: right;
+}
+
+.toolbar li a {
+    text-decoration:none;
+}
+
+#repost {
+    top: 20px;
 }
