--- a/css/repost.css
+++ b/css/repost.css
@@ -9,6 +9,14 @@
  */
 
 /**
+ * Fonts 
+ */
+@font-face { 
+    font-family: "Abel"; 
+    src: url('chrome-extension://__MSG_@@extension_id__/css/Abel-Regular.tff');
+}
+
+/**
  * Post Table
  */
 table{
@@ -58,10 +66,6 @@ div.metric{
     position:relative;
     height: 100%;
     width: 100%;
-	/*
-    height: 180px;
-    width: 280px;
-	*/
 	text-align:center;
  }
 .post{
@@ -201,7 +205,7 @@ span.name {
 }
 
 #repost #rpdialog label{
-    font-family:"Lucida Console", Courier New, monospace;
+    font-family: "Abel", Courier New, monospace;
     margin: 0 5px 0 0 ;
 }
 
@@ -210,7 +214,7 @@ span.name {
     color:#000;
     cursor:pointer;
     font-weight:bold;
-    font-family:"Lucida Console", Courier New, monospace;
+    font-family: "Abel", Courier New, monospace;
     position: absolute;
     top: 5px;
     right: 7px;
@@ -249,7 +253,7 @@ span.name {
     width: 98%;
 }
 
-repost caption{
+#repost caption{
     position: absolute;
     left:10px;
     top:20px;
