--- a/css/repost.css
+++ b/css/repost.css
@@ -56,7 +56,7 @@ div.metric{
     top:30px;
     left:240px;
     position: relative; 
-    font-family:"Lucida Console", Courier New, monospace;
+    font-family: 'Abel', Helvetica, Arial, sans-serif;
 }
 
 /**
@@ -115,7 +115,7 @@ div.posttextbody{
     top: 30px;
     left: 10px;
     max-width:180px;
-    font-family:"Lucida Console", Courier New, monospace;
+    font-family: 'Abel', Helvetica, Arial, sans-serif;
     word-wrap: break-word;
 }
 .textpostcaption{
@@ -124,7 +124,7 @@ div.posttextbody{
     left: 10px;
 }
 div.postcaption{
-    font-family:"Lucida Console", Courier New, monospace;
+    font-family: 'Abel', Helvetica, Arial, sans-serif;
 }
 .imagepostcaption{
     position:absolute;
@@ -147,7 +147,7 @@ div.postcaption{
   height: 70px;
 }
 .message{
-    font-family:"Lucida Console", Courier New, monospace;
+    font-family: 'Abel', Helvetica, Arial, sans-serif;
     position:absolute;
     left:10px;
     top:10px;
@@ -201,11 +201,11 @@ span.name {
   background:#ececec;
   box-shadow:2px 2px 5px #000;
   padding: 7px 10px 7px 10px;
-  z-index:99999999;
+  z-index:999;
 }
 
 #repost #rpdialog label{
-    font-family: "Abel", Courier New, monospace;
+    font-family: 'Abel', Helvetica, Arial, sans-serif;
     margin: 0 5px 0 0 ;
 }
 
@@ -214,27 +214,31 @@ span.name {
     color:#000;
     cursor:pointer;
     font-weight:bold;
-    font-family: "Abel", Courier New, monospace;
+    font-family: 'Abel', Helvetica, Arial, sans-serif;
     position: absolute;
     top: 5px;
     right: 7px;
-    z-index:99999999;
+    z-index:999;
 }
 
 /**
  * Links
  */
 /*TOOLTIPS*/
-.tip {
+#repost .tip {
+    font-family: 'Abel', Helvetica, Arial, sans-serif;
     text-align: left;
     width:auto;
     max-width:500px;
+    z-index:1000;
 }
 
-.tip-title {
+#repost .tip-title {
+    font-family: 'Abel', Helvetica, Arial, sans-serif;
     font-size: 11px;
     text-align:center;
     margin-bottom:2px;
+    z-index:1000;
 }
 
 #repost .linkbox{
