--- a/css/repost.css
+++ b/css/repost.css
@@ -347,7 +347,7 @@ div.divcol {
  */
 
 #repost #repostMenu {
-    position:fixed;
+    position:absolute;
     top: 0px;
     left: 0px;
     width: 100%;
@@ -368,18 +368,18 @@ div.divcol {
     margin: 0px;
 }
 
-#repost .toolbar {
+#repost #repostMenu .toolbar {
     margin: 0px;
 }
 
-#repost .toolbar li {
+#repost #repostMenu .toolbar li {
     display: inline;
     padding: 0.5em;
     padding: 0.5em;
     float: right;
 }
 
-#repost .toolbar li a {
+#repost #repostMenu .toolbar li a {
     text-decoration: none;
     text-transform: uppercase;
 		color: #757575;
