--- a/css/repost.css
+++ b/css/repost.css
@@ -19,12 +19,6 @@
 /**
  * Post Table
  */
-table{
-    border-collapse:collapse;
-    margin:1em 0;
-    table-layout: fixed;
-}
-
 .postcell {
     background:#B4C3FF;
     border:1px solid #fff;
@@ -86,29 +80,11 @@ div.imagepost {
 }
 
 .imagepreview{
-    /*position:absolute;
-    left:0px;*/
     top: 0px;
     max-width:100%;
     max-height:100%;    
 	vertical-align:middle;
-	/*
-	display: block;
-	margin: auto;
-	*/
 }
-/*
-.imagepreview:hover{
-    background:#388EA6;
-    box-shadow:2px 2px 5px #000;
-    padding: 7px 10px 7px 10px;
-    max-width:600px;
-    max-height:400px;    
-    z-index:9999;
-	left:0%;
-	top:0%;
-}
-*/
 div.posttextbody{
     position: absolute;
     font-size: 75%;
@@ -141,7 +117,6 @@ div.postcaption{
 /**
  * Repost commons
  */
-
 span.name {
       cursor: pointer;
 }
@@ -238,14 +213,12 @@ span.name {
     margin-bottom:2px;
     z-index:1000;
 }
-
 #repost .linkbox{
   top: 10%;
   height: 80%;
   left: 10%;
   width: 80%;
  }
-
 #repost #infovis{
     opacity:1;
     margin: auto;
@@ -288,18 +261,21 @@ span.name {
 .contenttext{
 }
 
+#repost #divtable {
+    top:65px;
+    left:10%;
+    width:80%;
+    height:100%;
+	position:fixed;
+}
 div.divrow {
-	position:absolute;
 	width:100%;
 }
-
 div.divcol {
 	position:absolute;
-    /*background:#B4C3FF;*/
-    height:100%;
+    height:20%;
 	text-align:center;
 }
-
 #divRow0 {
     top:3%;
     height:20%;
@@ -324,9 +300,7 @@ div.divcol {
     margin: 0px;
     left:0px;
 }
-
 .divCol0 {
-    left:10%;
 	width:20%;
 }
 .divCol1 {
@@ -334,26 +308,24 @@ div.divcol {
 	width:20%;
 }
 .divCol2 {
-    left:50%;
+    left:55%;
 	width:20%;
 }
 .divCol3 {
-    left:70%;
+    left:80%;
 	width:20%;
 }
 
 /**
  * Menu Bar
  */
-
 #repost #repostMenu {
-    position:absolute;
+    position: fixed;
     top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 20px;
+    left: 10%;
+    width: 80%;
+    height: 50px;
 }
-
 #repost #repostMenu .statusCircle {
     display:inline;
     width: 20px;
@@ -362,35 +334,32 @@ div.divcol {
     -webkit-border-radius:10px;
     background: #FC4023;
 }
-
-#repostLogo {
+#repost #repostMenu #repostLogo {
     float: left;
     margin: 0px;
 }
-
 #repost #repostMenu .toolbar {
     margin: 0px;
 }
-
 #repost #repostMenu .toolbar li {
     display: inline;
     padding: 0.5em;
     padding: 0.5em;
     float: right;
 }
-
 #repost #repostMenu .toolbar li a {
     text-decoration: none;
     text-transform: uppercase;
-		color: #757575;
+    color: #757575;
     font-family: 'Abel', Helvetica, Arial, sans-serif;
-		font-size: 20px;
+    font-size: 20px;
 }
 
+/**
+ * General Settings
+ */
 #repost {
-    top: 20px;
 }
-
 body {
 		background: #ececec
 }
