--- a/css/repost.css
+++ b/css/repost.css
@@ -30,23 +30,23 @@
 .rockon {
     background:#A7E7FF;
 }
-.votehand{
+#repost .votehand{
     width:27px;
     position: relative; 
 }
-.downhand{
-    position: absolute;
+#repost .downhand{
+    position:absolute;
     bottom:0%;
     left:80%;
     z-index:1;
 }
-.uphand{
-    position: absolute;
+#repost .uphand{
+    position:absolute;
     top:0%;
     left:80%;
     z-index:1;
 }
-div.metric{
+#repost div.metric{
     top:30px;
     left:240px;
     position: relative; 
