--- a/css/repost.css
+++ b/css/repost.css
@@ -161,11 +161,13 @@ span.name {
     margin: 0 5px 0 0 ;
 }
 #repost #rpdialog img.floatclose {
-    cursor:pointer;
+    cursor: pointer;
     position: absolute;
     top: 5px;
     right: 7px;
-    z-index:999;
+    z-index: 999;
+    height: 20px;
+    width: 20px;
 }
 /* Confirmation Popup */
 #repost .confirmation#rpdialog{
@@ -205,7 +207,6 @@ span.name {
     max-width:500px;
     z-index:1000;
 }
-
 #repost .tip-title {
     font-family: 'Abel', Helvetica, Arial, sans-serif;
     font-size: 11px;
@@ -227,7 +228,6 @@ span.name {
     left: 1%;
     width: 98%;
 }
-
 #repost caption{
     position: absolute;
     left:10px;
