--- a/css/repost.css
+++ b/css/repost.css
@@ -130,7 +130,7 @@ span.name {
     background:#ececec;
     box-shadow:2px 2px 5px #000;
     padding: 7px 10px 7px 10px;
-    z-index:999;
+    z-index: 8999;
     font-family: 'Abel', Helvetica, Arial, sans-serif;
 }
 #repost #rpdialog label{
@@ -349,5 +349,16 @@ span.name {
 #repost {
 }
 body {
-		background: #ececec
+    background: #ececec;
+}
+#mask {
+    position: fixed;
+    display: none;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-color:#000;
+    opacity:0.8;
+    z-index:9000;
 }
