--- a/css/repost.css
+++ b/css/repost.css
@@ -126,7 +126,7 @@ span.name {
  */
 #repost div#rpdialog{
     opacity:0.95;
-    position: absolute;
+    position: fixed;
     background:#ececec;
     box-shadow:2px 2px 5px #000;
     padding: 7px 10px 7px 10px;
@@ -349,6 +349,7 @@ span.name {
 #repost {
 }
 body {
+     -khtml-user-select: none; /* webkit browsers */
     background: #ececec;
 }
 #mask {
