--- a/css/repost.css
+++ b/css/repost.css
@@ -127,6 +127,7 @@ span.name {
 #repost div#rpdialog{
     opacity:0.95;
     position: fixed;
+    margin: auto;
     background:#ececec;
     box-shadow:2px 2px 5px #000;
     padding: 7px 10px 7px 10px;
