Reverted plugin. Added some niceness to the delete and add.

--- a/css/repost.css
+++ b/css/repost.css
@@ -152,11 +152,6 @@ span.name {
     width: 250px;
     height: 70px;
 }
-#repost .confirmation#rpdialog .message{
-    position:absolute;
-    left:10px;
-    top:10px;
-}
 #repost .confirmation#rpdialog .ok{
     position: absolute;
     top: 50px;
@@ -195,7 +190,7 @@ span.name {
 }
 /* Add Account Dialog */
 #repost .confirmation.accountaddbox#rpdialog {
-    width: 250px;
+    width: 210px;
     height: 205px;
 }
 #repost .confirmation.accountaddbox#rpdialog .title{
@@ -208,6 +203,50 @@ span.name {
 #repost .confirmation.accountaddbox#rpdialog .cancel{
     top: 180px;
     left: 110px;
+}
+#repost .confirmation.accountaddbox#rpdialog input.username{
+    width: 200px;
+}
+#repost .confirmation.accountaddbox#rpdialog input.password{
+    width: 200px;
+}
+/* Add Link Dialog */
+#repost .confirmation.linkaddbox#rpdialog {
+    width: 210px;
+    height: 110px;
+}
+#repost .confirmation.linkaddbox#rpdialog .title{
+    font-size: x-large;
+}
+#repost .confirmation.linkaddbox#rpdialog .ok{
+    top: 90px;
+    left: 10px;
+}
+#repost .confirmation.linkaddbox#rpdialog .cancel{
+    top: 90px;
+    left: 110px;
+}
+#repost .confirmation.linkaddbox#rpdialog input.linkinput{
+    width: 200px;
+}
+/* Remove Link Dialog */
+#repost .confirmation.linkremover#rpdialog {
+    width: 210px;
+    height: 90px;
+}
+#repost .confirmation.linkremover#rpdialog .title{
+    font-size: x-large;
+}
+#repost .confirmation.linkremover#rpdialog .ok{
+    top: 70px;
+    left: 10px;
+}
+#repost .confirmation.linkremover#rpdialog .cancel{
+    top: 70px;
+    left: 110px;
+}
+#repost .confirmation.linkremover#rpdialog input.linkinput{
+    width: 200px;
 }
 /**
  * Links
