--- a/css/repost.css
+++ b/css/repost.css
@@ -19,15 +19,15 @@
 /**
  * Post Table
  */
-.postcell {
+#repost .postcell {
     background:#B4C3FF;
     border:1px solid #fff;
 	width:20%;
 }
-.fuckoff {
+#repost .fuckoff {
     background:#9D98E8;
 }
-.rockon {
+#repost .rockon {
     background:#A7E7FF;
 }
 #repost .votehand{
@@ -56,13 +56,13 @@
 /**
  * Post styles 
  */
- .postspace{
+#repost .postspace{
     position:relative;
     height: 100%;
     width: 100%;
 	text-align:center;
  }
-.post{
+#repost .post{
     position:absolute;
     left:0px;
     top:0px;
@@ -70,22 +70,20 @@
     width: 100%;
 	text-align:center;
  }
-
-div.imagepost {
+#repost div.imagepost {
 	text-align:center;
 	float:left;
 	top: 0px;
     width:100%;
     height:100%;    
 }
-
-.imagepreview{
+#repost .imagepreview{
     top: 0px;
     max-width:100%;
     max-height:100%;    
 	vertical-align:middle;
 }
-div.posttextbody{
+#repost div.posttextbody{
     position: absolute;
     font-size: 75%;
     top: 30px;
@@ -94,22 +92,22 @@ div.posttextbody{
     font-family: 'Abel', Helvetica, Arial, sans-serif;
     word-wrap: break-word;
 }
-.textpostcaption{
+#repost .textpostcaption{
     position: absolute;
     top: 10px;
     left: 10px;
 }
-div.postcaption{
+#repost div.postcaption{
     font-family: 'Abel', Helvetica, Arial, sans-serif;
 }
-.imagepostcaption{
+#repost .imagepostcaption{
     position:absolute;
     top: 140px;
     left: 12px;
     height: 35px;
     overflow: hidden;
 }
-.imagepostcaption:hover{
+#repost .imagepostcaption:hover{
     overflow: visible;
     z-index:9999;
 }
@@ -117,77 +115,13 @@ div.postcaption{
 /**
  * Repost commons
  */
-span.name {
+#repost span.name {
       cursor: pointer;
 }
 
 /**
  * Floating Boxes
  */
-#repost div#rpdialog{
-    opacity:0.95;
-    position: fixed;
-    margin: auto;
-    background:#ececec;
-    box-shadow:2px 2px 5px #000;
-    padding: 7px 10px 7px 10px;
-    z-index: 8999;
-    font-family: 'Abel', Helvetica, Arial, sans-serif;
-}
-#repost #rpdialog label{
-    font-family: 'Abel', Helvetica, Arial, sans-serif;
-    margin: 0 5px 0 0 ;
-}
-#repost #rpdialog img.floatclose {
-    cursor: pointer;
-    position: absolute;
-    top: 5px;
-    right: 7px;
-    z-index: 999;
-    height: 20px;
-    width: 20px;
-}
-/* Confirmation Popup */
-#repost .confirmation#rpdialog{
-    width: 250px;
-    height: 70px;
-}
-#repost .confirmation#rpdialog .ok{
-    position: absolute;
-    top: 50px;
-    left: 30px;
-    width: 90px;
-}
-#repost .confirmation#rpdialog .cancel{
-    position: absolute;
-    top: 50px;
-    left: 140px;
-    width: 90px;
-}
-/* Single Field Popup */
-#repost .singlefield#rpdialog{
-    width: 280px;
-    height: 90px;
-}
-#repost .singlefield#rpdialog .ok{
-    position: absolute;
-    top: 70px;
-    left: 120px;
-    width: 70px;
-}
-#repost .singlefield#rpdialog .cancel{
-    position: absolute;
-    top: 70px;
-    left: 200px;
-    width: 70px;
-}
-#repost .singlefield#rpdialog .inputbox{
-    position:absolute;
-    top: 25px;
-    left: 15px;
-    width: 250px;
-    margin: 15px 5px 15px 0px;
-}
 /* Add Account Dialog */
 #repost .confirmation.accountaddbox#rpdialog {
     width: 210px;
@@ -254,32 +188,6 @@ span.name {
 }
 #repost #rpdialog div.menuopt:hover{
     background:#777777;
-}
-/* ItemPostBox */
-#repost .confirmation.itempostbox#rpdialog {
-    width: 320px;
-    height: 70px;
-    font-family: 'Abel', Helvetica, Arial, sans-serif;
-    font-size: large;
-}
-#repost .confirmation.itempostbox#rpdialog div.label {
-}
-#repost .confirmation.itempostbox#rpdialog input.caption {
-    width: 250px;
-    height: 25px;
-    top: 35px;
-    position: absolute;
-    font-family: 'Abel', Helvetica, Arial, sans-serif;
-    font-size: large;
-}
-#repost .confirmation.itempostbox#rpdialog button.ok {
-    top: 35px;
-    left: 280px;
-    height: 30px;
-    width: 50px;
-}
-#repost .confirmation.itempostbox#rpdialog button.cancel {
-    display: none;
 }
 /**
  * Links
