--- a/css/repost.css
+++ b/css/repost.css
@@ -265,6 +265,11 @@
     background-color:#000;
     opacity:0.8;
     z-index:9000;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
 }
 #repost #divtable div.divrow {
 	width:100%;
